fix: Webhook formula tree collapse, style checkbox rounded

--- a/clients/components/schema-form/style.scss
+++ b/clients/components/schema-form/style.scss
@@ -1,6 +1,6 @@
 .schema-form-field {
 
-  label {
+  &>label {
     @apply text-gray-600 text-12 flex;
     margin: 8px 0 !important;
 
